@@ -42,6 +42,8 @@ Released: N/A
   * Fixed love.window.setMode crashing when called with a Canvas active.
   * Fixed gamma correction of ImageFonts and BMFonts with colored images.
   * Fixed the default shader improperly applying gamma correction to per-vertex colors when gamma correction is requested but not supported on OpenGL ES.
+  * Fixed text coloring breaking because of an empty string.
+  * Fixed large burst of particles when dramatically increasing the emission rate of a ParticleSystem.
 
   * Improved performance of Channel methods by roughly 2x in many cases.
   
